# alfred

./: README.md  docker-compose.yml
backend/: .cruft.json  .env.example  .gitignore  Dockerfile  mkdocs.yml  pyproject.toml
backend/configs/: data_settings.yaml  google_settings.yaml
backend/src/alfred/: config.py  data_loader.py  database.py  get_recommendations.py  get_topics.py  google_search.py  json_utils.py  main.py  models.py  palm.py  pydantic_models.py  rss.py  schemas.py  scrape_url.py  topics.py
backend/src/alfred/api/: main.py
backend/src/alfred/api/routers/: predictions.py  recommendation.py  topic.py
backend/tests/configs/: data_settings_test.yaml  input_settings_test.yaml
